--- a/a2.ipynb
+++ b/a2.ipynb
@@ -448,18 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0: New best fitness = 45\n",
-      "Generation 0: Best fitness = 45\n",
-      "Generation 1: New best fitness = 40\n",
-      "Generation 2: New best fitness = 30\n",
-      "Generation 4: New best fitness = 20\n",
+      "Generation 0: New best fitness = 30\n",
+      "Generation 0: Best fitness = 30\n",
+      "Generation 1: New best fitness = 20\n",
       "Generation 50: Best fitness = 20\n",
       "Generation 100: Best fitness = 20\n",
       "Generation 150: Best fitness = 20\n",
@@ -793,6 +791,8 @@
     "        \n",
     "        return best_individual, best_fitness\n",
     "    \n",
+    "    # Fix for the save_results_to_excel method - replace just this method in the original code\n",
+    "\n",
     "    def save_results_to_excel(self, solution, filename=\"shelf_optimization_results.xlsx\"):\n",
     "        \"\"\"Save the optimization results to an Excel file\"\"\"\n",
     "        # Create a DataFrame with the results\n",
@@ -843,7 +843,6 @@
     "            df_shelves.to_excel(writer, sheet_name=\"Shelf Utilization\", index=False)\n",
     "            \n",
     "        print(f\"Results saved to {filename}\")\n",
-    "\n",
     "# Example usage\n",
     "if __name__ == \"__main__\":\n",
     "    # Define shelves\n",
