--- a/a2.ipynb
+++ b/a2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -11,19 +11,21 @@
      "text": [
       "Starting local beam search...\n",
       "Iteration 0: New best score = -3.348828125, Colors = 5\n",
-      "Early stopping at iteration 0 - No improvement possible\n",
+      "Iteration 1: New best score = -3.3482421875, Colors = 5\n",
+      "Iteration 2: New best score = -3.34794921875, Colors = 5\n",
+      "Early stopping at iteration 2 - No improvement possible\n",
       "Solution is valid.\n",
       "\n",
       "Final coloring statistics:\n",
       "Number of colors used: 5\n",
-      "Color balance score: 0.5039\n",
+      "Color balance score: 0.5068\n",
       "\n",
       "Color distribution:\n",
-      "Color 0: 509 vertices\n",
+      "Color 0: 507 vertices\n",
       "Color 1: 504 vertices\n",
       "Color 2: 8 vertices\n",
       "Color 3: 2 vertices\n",
-      "Color 4: 1 vertices\n",
+      "Color 4: 3 vertices\n",
       "\n",
       "Generating visualization...\n",
       "Graph Visualization Started\n",
